# ffmpeg-libav-tutorial

./: .gitignore  0_hello_world.c  2_remuxing.c  2_transcoding.c  3_0_transmuxing.c  3_1_transmuxing_fmp4.c  3_transcoding.c  3_transcoding_gop.c  3_transcoding_h265.c  CMakeLists.txt  Dockerfile  LICENSE  Makefile  README-cn.md  README-es.md  README-ko.md  README-pt.md  README-vn.md  README.md  fetch_bbb_video.sh  remuxed_small_bunny_1080p_60fps.ts  video_debugging.c  video_debugging.h
.github/workflows/: docker-image.yml
language/zh/: preface.md
